fixing nav menu alignment

--- a/static/sv2013/includes/css/bootstrap.css
+++ b/static/sv2013/includes/css/bootstrap.css
@@ -2840,6 +2840,7 @@ table th[class*="span"],
 .dropup,
 .dropdown {
   position: relative;
+  text-align: left;
 }
 
 .dropdown-toggle {
